# BoostCamp_Baseline

./: .flake8  .gitignore  LICENSE  README.md  data_download_process.py  ensemble_predict.py  evaluate.py  predict.py  pyproject.toml  test.py  train.py
configs/augmentation_configs/: image_classification.yaml
configs/data_configs/: image_classification_contest.yaml  mnist_config.yaml
configs/ensemble_configs/: ensemble_config.yaml
configs/train_configs/test/: config.yaml
configs/train_configs/train/: config.yaml  image_classification_base_cnn.yaml  mnist_cnn_config.yaml
data/: raw.dvc
scripts/: train.py
src/data/: base_datamodule.py
src/data/collate_fns/: mnist_collate_fn.py
src/data/collate_fns/image_classification/: custom_collate_fn.py
src/data/custom_datamodules/: mnist_datamodule.py
src/data/custom_datamodules/image_classification/: imageclassification_datamodule.py
src/data/datasets/: cv_level1_dataset.py  mnist_dataset.py
src/models/: base_model.py  mnist_cnn_model.py
src/models/image_classification/: base_cnn_model.py  resnet18.py
src/plmodules/: mnist_cnn_module.py  mnist_module.py
src/plmodules/image_classification/: image_classification_module.py  image_classification_resnet_module.py
src/utils/: data_utils.py  path_utils.py
tests/: conftest.py  test_datamodules.py  test_datasets.py
tests/image_classification/: test_datamodule.py  test_datasets.py
