[tool.poetry]
name = "boostcamp-baseline"
version = "0.1.0"
description = ""
authors = ["박성현 <silkcoop@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
